fix project and job page height footer spacing for mobile

--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -1,11 +1,9 @@
 .project {
-  height: 94vh;
-  min-height: 800px;
+  min-height: 94vh;
   border-bottom: 1px solid #dee2e6;
 }
 
 .project .container {
-  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
