--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -26,10 +26,9 @@
     float: left;
     width:  100%;
     height: 275px;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 8px;
   }
-  
   
   /* Responsive layout - makes a two column-layout instead of four columns */
   @media screen and (max-width: 1200px) {
