--- a/src/app/work-experience/job/job.component.scss
+++ b/src/app/work-experience/job/job.component.scss
@@ -1,10 +1,8 @@
 .job{
-    height: 94vh;
-    min-height: 800px;
+    min-height: 90vh;
     border-bottom: 1px solid #dee2e6;
 }
 .job .container {
-    height: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
